--- a/run_mlflow_epidemic.ipynb
+++ b/run_mlflow_epidemic.ipynb
@@ -32,7 +32,9 @@
    "outputs": [],
    "source": [
     "# training\n",
-    "reward, dqn = ep_run(plot_title=\"Training\", train=True).run_experimentation(run_name = \"rl-training\", lr=1e-3, num_steps=20000)"
+    "reward, dqn = ep_run(\n",
+    "    reward_factor=0.2, plot_title=\"Training\", train=True\n",
+    ").run_experimentation(run_name=\"RUN_NAME\", lr=1e-3, num_steps=200000)"
    ]
   },
   {
@@ -41,10 +43,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# testing\n",
-    "test_ep_runner = ep_run(action_space=Discrete(1), plot_title=\"continuous restrictions\", train=False) # lockdown\n",
-    "test_reward = test_ep_runner.test(test_ep_runner.env, experiment_type=\"lockdown\", num_episodes=1)"
+    "test_ep_runner = ep_run(\n",
+    "    reward_factor=0.2, plot_title=\"testing\", train=False\n",
+    ")  # lockdown\n",
+    "test_reward = dqn.test(test_ep_runner.env, num_episodes=100, visualize=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# manual simulation\n",
+    "ep_runner = ep_run(plot_title=\"continuous restrictions\", train=False)  # lockdown\n",
+    "simulation_reward = ep_runner.test(\n",
+    "    test_ep_runner.env, experiment_type=\"lockdown\", num_episodes=1\n",
+    ")"
    ]
   }
  ],
